--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FOUNDER WAR ROOM</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
+  <meta name="description" content="FOUNDER WAR ROOM - The ultimate execution system for ambitious startup founders." />
+  <title>FOUNDER WAR ROOM</title>
+
+  <!-- Preload fonts to avoid layout shift and improve LCP -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Outfit:wght@500;600;700&display=swap"
+    rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+  <noscript>
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Outfit:wght@500;600;700&display=swap" />
+  </noscript>
+
+  <!-- Performance: Defer non-critical JS if any external is added later -->
+  <style>
+    /* Inline critical CSS to prevent FOUC & CLS */
+    body {
+      background-color: #050505;
+      color: #ededed;
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+    }
+
+    #root {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+  </style>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!-- Vite handles module script optimization automatically -->
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
